--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/second_homework_db
-spring.datasource.username=postgres
-spring.datasource.password=Passwordw
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=n11
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#logging.level.org.springframework = info
+spring.jpa.defer-datasource-initialization=true
+server.port=8080
+
+application.title = n11 bootcamp 
+application.version = 1.0.0
+
+logging.level.org.springframework = info
